chapter1/ex03/results/task1.txt

Status: FAILED!
Reason: Unable to run triangle.py
Error:   File "/home/runner/work/9780357881019-fundamentals-of-python-3e-27b195fd-3caa-4055-9ab7-0db90836b126/9780357881019-fundamentals-of-python-3e-27b195fd-3caa-4055-9ab7-0db90836b126/python/chapter1/ex03/triangle.py", line 1
    print(f"Triangle area is {float(input('Input height\n'))*float(input('Input base\n'))*0.5}")
                                                                                               ^
SyntaxError: f-string expression part cannot include a backslash

Timestamp: 2025-01-08 01:21:55.716542

Status: FAILED!
Reason: Unable to run triangle.py
Error:   File "/home/runner/work/9780357881019-fundamentals-of-python-3e-27b195fd-3caa-4055-9ab7-0db90836b126/9780357881019-fundamentals-of-python-3e-27b195fd-3caa-4055-9ab7-0db90836b126/python/chapter1/ex03/triangle.py", line 1
    print(f"Triangle area is {float(input('Input height\n'))*float(input('Input base\n'))*0.5}")
                                                                                               ^
SyntaxError: f-string expression part cannot include a backslash

Timestamp: 2025-01-08 01:21:55.716691

Status: FAILED!
Reason: Unable to run triangle.py
Error:   File "/home/runner/work/9780357881019-fundamentals-of-python-3e-27b195fd-3caa-4055-9ab7-0db90836b126/9780357881019-fundamentals-of-python-3e-27b195fd-3caa-4055-9ab7-0db90836b126/python/chapter1/ex03/triangle.py", line 1
    print(f"Triangle area is {float(input('Input height\n'))*float(input('Input base\n'))*0.5}")
                                                                                               ^
SyntaxError: f-string expression part cannot include a backslash

Timestamp: 2025-01-08 01:21:55.803242

Status: FAILED!
Reason: Unable to run triangle.py
Error:   File "/home/runner/work/9780357881019-fundamentals-of-python-3e-27b195fd-3caa-4055-9ab7-0db90836b126/9780357881019-fundamentals-of-python-3e-27b195fd-3caa-4055-9ab7-0db90836b126/python/chapter1/ex03/triangle.py", line 1
    print(f"Triangle area is {float(input('Input height\n'))*float(input('Input base\n'))*0.5}")
                                                                                               ^
SyntaxError: f-string expression part cannot include a backslash

Timestamp: 2025-01-08 01:21:55.803309

Status: FAILED!
Reason: Unable to run triangle.py
Error:   File "/home/runner/work/9780357881019-fundamentals-of-python-3e-27b195fd-3caa-4055-9ab7-0db90836b126/9780357881019-fundamentals-of-python-3e-27b195fd-3caa-4055-9ab7-0db90836b126/python/chapter1/ex03/triangle.py", line 1
    print(f"Triangle area is {float(input('Input height\n'))*float(input('Input base\n'))*0.5}")
                                                                                               ^
SyntaxError: f-string expression part cannot include a backslash

Timestamp: 2025-01-08 01:21:55.874645

Status: FAILED!
Reason: Unable to run triangle.py
Error:   File "/home/runner/work/9780357881019-fundamentals-of-python-3e-27b195fd-3caa-4055-9ab7-0db90836b126/9780357881019-fundamentals-of-python-3e-27b195fd-3caa-4055-9ab7-0db90836b126/python/chapter1/ex03/triangle.py", line 1
    print(f"Triangle area is {float(input('Input height\n'))*float(input('Input base\n'))*0.5}")
                                                                                               ^
SyntaxError: f-string expression part cannot include a backslash

Timestamp: 2025-01-08 01:21:55.874711
